# hackathon-vnedraid-latech-e-com

./: .gitignore  LICENSE  README.md  product.json
backend/products/: .dockerignore  .env.example  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/products/src/: config.py  main.py
backend/products/src/api/routes/: analytics.py  brand.py  categories.py  comments.py  items.py  orders.py  product.py
backend/products/src/db/migrations/: env.py
backend/products/src/db/migrations/versions/: 0f40c158ab8e_.py  0f81ba5297fe_.py  135377b49ff8_.py  1f5f8e6de45e_.py  56926d53c331_.py  8730a7187464_.py  99e3948f25ca_.py  aa09eb29d645_.py  bc9a26deae6c_.py  be5b698b8c45_.py  d1e5ea2a3476_.py  f3b3875f212c_.py
backend/products/src/db/models/: __init__.py  brand.py  category.py  comment.py  item.py  order.py  product.py
backend/products/src/db/repositories/: __init__.py  brand.py  category.py  comment.py  item.py  order.py  product.py
backend/products/src/dependencies/: __init__.py  db.py  seller.py
backend/products/src/dependencies/repositories/: category.py  item.py
backend/products/src/repositories/: category.py  item.py
backend/products/src/routes/: analytics.py
backend/products/src/schemas/: __init__.py  brand.py  category.py  comment.py  item.py  order.py  product.py  responses.py  seller.py
backend/users/: .env.example  Dockerfile  Dockerfile-test  README.md  docker-compose-test.yml  docker-compose.yml  pyproject.toml
backend/users/.github/workflows/: docker-image.yml
backend/users/src/: config.py  main.py
backend/users/src/application/services/: jwt_tokens_manager.py  password_manager.py
backend/users/src/application/use_cases/: users.py
backend/users/src/db/: dependencies.py
backend/users/src/db/migrations/: env.py
backend/users/src/db/migrations/versions/: 21ca3b515192_.py  4e57f5f356bc_.py  638fa128652e_.py  807ff4a04916_.py  d83193f10b11_.py
backend/users/src/domain/: enums.py
backend/users/src/domain/dtos/: password.py  tokens.py  users.py
backend/users/src/domain/exceptions/: auth.py  tokens.py  users.py
backend/users/src/domain/interfaces/: password_manager.py  tokens_manager.py
backend/users/src/domain/interfaces/repositories/: users.py
backend/users/src/domain/interfaces/uows/: users.py
backend/users/src/presentation/: dtos.py
backend/users/src/presentation/dependencies/: __init__.py  credentials.py
backend/users/src/presentation/routes/: users.py
backend/users/tests/fixtures/: app.py  db.py  users.py
backend/users/tests/integration/: conftest.py
backend/users/tests/integration/users/: test_login.py  test_user_create.py
backend/users/tests/utils/: db.py
(+48 files in other folders)
