[project]
name = "product"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "dishka>=1.6.0",
    "fastapi>=0.115.12",
    "fastapi-derive-responses>=0.1.4",
    "fastapi-swagger>=0.2.18",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "ruff[dev]>=0.11.13",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[tool.ruff]
line-length = 120
lint.ignore = ["PLR"]
lint.extend-select = ["I", "UP", "PL"]
target-version = "py312"
